Split Data Dash into two sections by dbGaP Readiness. Resolves #465. (#467)

--- a/src/components/data-table/data-table.module.css
+++ b/src/components/data-table/data-table.module.css
@@ -88,7 +88,12 @@ table {
     padding: 0 4px;
 }
 
-/* Detail table - row cell - "" */
+/* Detail table - row cell - "projectId" */
+.detail .row td:nth-of-type(2) {
+    min-width: 452px;
+}
+
+/* Detail table - row cell - "dbGapId" */
 .detail .row td:nth-of-type(3) {
     min-width: 124px;
 }
